--- a/src/index.html
+++ b/src/index.html
@@ -26,12 +26,13 @@
       <div class="post__img"></div>
 
       <p class="post__descr"></p>
-      <p class="post__author"></p>
-      <div class="post__social">
-        <button class="post__actions"></button>
-        <button class="post__like"></button>
+      <div class="post__footer">
+        <span class="post__author"></span>
+        <div class="post__social">
+          <button class="post__actions"></button>
+          <button class="post__like"></button>
+        </div>
       </div>
-
     </div>
   </template>
 </body>
